# Derivatives-Algorithms-Lib

./: .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_windows.bat  compile_commands.json  index.md
dal/: CMakeLists.txt  algorithms.hpp  host.cpp  host.hpp  platform.hpp
dal/auto/: MG_BSModelData_v1_Read.inc  MG_BSModelData_v1_Write.inc  MG_Bag_Read.inc  MG_Bag_Write.inc  MG_BizDayConvention_enum.hpp  MG_BizDayConvention_enum.inc  MG_Box_Read.inc  MG_Box_Write.inc  MG_Ccy_enum.hpp  MG_Ccy_enum.inc  MG_Clearer_enum.hpp  MG_Clearer_enum.inc  MG_CollateralType_enum.hpp  MG_CollateralType_enum.inc  MG_Cubic1_Read.inc  MG_Cubic1_Write.inc  MG_Cubic1_object.hpp  MG_DateGeneration_enum.hpp  MG_DateGeneration_enum.inc  MG_DateStepSize_enum.hpp  MG_DateStepSize_enum.inc  MG_DayBasis_enum.hpp  MG_DayBasis_enum.inc  MG_DiscountPWLF_v1_Read.inc  MG_DiscountPWLF_v1_Write.inc  MG_DomainCondProp_enum.hpp  MG_DomainCondProp_enum.inc  MG_DupireModelData_v1_Read.inc  MG_DupireModelData_v1_Write.inc  MG_Fixings_Read.inc  MG_Fixings_Write.inc  MG_Fixings_object.hpp  MG_Format_public.htm  MG_Format_public.jl  MG_Interp1Linear_object.hpp  MG_Interp1Linear_v1_Read.inc  MG_Interp1Linear_v1_Write.inc  MG_Interp1_New_Linear_public.hpp  MG_Interp2Linear_v1_Read.inc  MG_Interp2Linear_v1_Write.inc  (+39 more)
dal/concurrency/: concurrentqueue.hpp  threadpool.cpp  threadpool.hpp
dal/currency/: currency.cpp  currency.hpp  currencydata.cpp  currencydata.hpp  init.cpp  init.hpp
dal/curve/: discount.cpp  discount.hpp  piecewiseconstant.cpp  piecewiseconstant.hpp  piecewiselinear.cpp  piecewiselinear.hpp  yc.cpp  yc.hpp  yccomponent.cpp  yccomponent.hpp  ycimp.cpp  ycimp.hpp
dal/excel/: exceldriverlite.cpp  exceldriverlite.hpp
dal/indice/: fixings.cpp  fixings.hpp  index.cpp  index.hpp  indexcomposite.cpp  indexcomposite.hpp  indexequity.cpp  indexequity.hpp  indexparse.cpp  indexparse.hpp  indexpath.cpp  indexpath.hpp
dal/math/: cell.cpp  cell.hpp  cellutils.cpp  cellutils.hpp  interp.cpp  interp.hpp  interpcubic.cpp  interpcubic.hpp  matrix.hpp  matrixarithmetic.cpp  matrixarithmetic.hpp  matrixs.cpp  matrixs.hpp  ndarray.cpp  ndarray.hpp  operators.hpp  operators.hpp~  rootfind.cpp  rootfind.hpp  smooth.cpp  smooth.hpp  specialfunctions.cpp  specialfunctions.hpp  stacks.hpp  vector.cpp  vector.hpp  vectors.cpp  vectors.hpp
dal/model/: base.hpp  blackscholes.cpp  blackscholes.hpp  dupire.cpp  dupire.hpp  factory.hpp  ivs.cpp  ivs.hpp  utilities.hpp
dal/platform/: config.hpp  host.cpp  host.hpp  initall.cpp  initall.hpp  optionals.hpp  platform.hpp  strict.hpp
dal/protocol/: accrualperiod.cpp  accrualperiod.hpp  assetvalue.cpp  assetvalue.hpp  clearer.cpp  clearer.hpp  collateraltype.cpp  collateraltype.hpp  conventions.cpp  conventions.hpp  couponrate.cpp  couponrate.hpp  currency.cpp  currency.hpp  currencydata.cpp  currencydata.hpp  optiontype.cpp  optiontype.hpp  payment.cpp  payment.hpp  underlying.cpp  underlying.hpp
dal/public/: __interp.cpp  __platform.hpp  _excel.hpp  _excell.cpp  _reader.hpp  _repository.cpp  _repository.hpp  _xlcall.cpp  _xlcall.hpp
dal/report/: exceldriverlite.cpp  exceldriverlite.hpp  excelimport.hpp
dal/risk/: report.cpp  report.hpp  reportutils.hpp  slide.hpp
dal/script/: event.cpp  event.hpp  node.cpp  node.hpp  nodebase.hpp  packincludes.hpp  parser.cpp  parser.hpp  simulation.cpp  simulation.hpp  visit.hpp  visitor.hpp  visitorlist.hpp
dal/storage/: _repository.cpp  _repository.hpp  archive.cpp  archive.hpp  audit.cpp  audit.hpp  bag.cpp  bag.hpp  box.cpp  box.hpp  globals.cpp  globals.hpp  json.cpp  json.hpp  splat.cpp  splat.hpp  storable.hpp
dal/string/: strings.cpp  strings.hpp  stringutils.cpp  stringutils.hpp
dal/time/: date.cpp  date.hpp  dateincrement.cpp  dateincrement.hpp  datetime.cpp  datetime.hpp  datetimeutils.cpp  datetimeutils.hpp  dateutils.cpp  dateutils.hpp  daybasis.cpp  daybasis.hpp  holidaydata.cpp  holidaydata.hpp  holidays.cpp  holidays.hpp  periodlength.cpp  periodlength.hpp  schedules.cpp  schedules.hpp
dal/utilities/: algorithms.hpp  asserts.cpp  asserts.hpp  composite.hpp  dictionary.cpp  dictionary.hpp  environment.cpp  environment.hpp  exceptions.cpp  exceptions.hpp  facts.hpp  file.cpp  file.hpp  functionals.cpp  functionals.hpp  maps.hpp  noncopyable.hpp  null.hpp  numerics.cpp  numerics.hpp  timer.hpp
examples/: CMakeLists.txt
examples/aad/: CMakeLists.txt  aad.cpp
examples/aad2/: CMakeLists.txt  aad.cpp  aad2.cpp
examples/aad3/: CMakeLists.txt  aad3.cpp
examples/aad_toy1/: CMakeLists.txt  aad_toy1.cpp
examples/aad_toy2/: CMakeLists.txt  aad_toy2.cpp
examples/concurrency/: CMakeLists.txt  concurrency.cpp
examples/dag/: CMakeLists.txt  README.md  script_engine.cpp
examples/date_utilities/: CMakeLists.txt  date_utilities.cpp
examples/dateutilities/: CMakeLists.txt  datautilities.cpp  dateutilities.cpp
examples/european/: CMakeLists.txt  euorpean.cpp
examples/european_fd/: CMakeLists.txt  european_fd.cpp
examples/european_mc/: CMakeLists.txt  euorpean_mc.cpp
examples/excelwriter/: CMakeLists.txt  excelwriter.cpp
examples/fd1d/: fd1d.cpp
examples/matrix_perf/: CMakeLists.txt  matrix_perf.cpp
examples/monte_carlo/: CMakeLists.txt
examples/script/: CMakeLists.txt  script.cpp
examples/script2/: CMakeLists.txt  script2.cpp
examples/script_compiled/: CMakeLists.txt  script_compiled.cpp
examples/snowball/: CMakeLists.txt  snowball.cpp
examples/sobol/: CMakeLists.txt  sobol.cpp
examples/underdetermined/: CMakeLists.txt  underdetermined.cpp
examples/uoc/: CMakeLists.txt  uoc.cpp
examples/uoc_compiled/: CMakeLists.txt  uoc_compiled.cpp
public/: CMakeLists.txt  __interp.cpp  __platform.hpp  __repository.cpp  _excel.cpp  _excel.hpp  _jni.cpp  _jni.hpp  _repository.cpp  _repository.hpp  _xlcall.cpp
public/auto/: MG_BSModelData_New_public.htm  MG_BSModelData_New_public.inc  MG_DupireModelData_New_public.htm  MG_DupireModelData_New_public.inc  MG_EvaluationDate_Get_public.htm  (+80 more)
tests/: CMakeLists.txt  host.cpp  main.cpp  test_main.cpp
(+390 files in other folders)
