add_subdirectory(aad)
add_subdirectory(concurrency)
add_subdirectory(date_utilities)
add_subdirectory(european)
add_subdirectory(sobol)
add_subdirectory(script)
add_subdirectory(script_compiled)
add_subdirectory(underdetermined)
add_subdirectory(uoc)
if(WIN32)
    add_subdirectory(excelwriter)
endif()
