add_subdirectory(aad)
add_subdirectory(concurrency)
add_subdirectory(date_utilities)
add_subdirectory(european)
add_subdirectory(fd1d)
add_subdirectory(monte_carlo)
add_subdirectory(snowball)
add_subdirectory(sobol)
add_subdirectory(underdetermined)
add_subdirectory(uoc)
add_subdirectory(uoc_compiled)
if(WIN32)
    add_subdirectory(excelwriter)
endif()
